--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -55,6 +55,7 @@
         android:text="Câmera"
         android:id="@+id/camera"
         android:layout_below="@+id/multimedia"
+        android:onClick="onToCamera"
         android:layout_centerHorizontal="true" />
 
     <Button
