--- a/app/src/main/res/layout/activity_receive_text.xml
+++ b/app/src/main/res/layout/activity_receive_text.xml
@@ -4,11 +4,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.ReceiveMessageActivity">
+    tools:context="br.com.samuelzvir.meuabc.activities.ReceiveTextActivity">
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <ToggleButton
+        android:id="@+id/speechToggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textOff="@string/speech_toggle_on"
+        android:textOn="@string/speech_toggle_off"
+        android:layout_gravity="left" />
 
 </RelativeLayout>
