--- a/app/src/main/res/layout/activity_create_text.xml
+++ b/app/src/main/res/layout/activity_create_text.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.CreateMessageActivity">
+    tools:context="br.com.samuelzvir.meuabc.activities.CreateTextActivity">
 
     <Button
         android:id="@+id/send"
