--- a/app/src/main/res/layout/activity_data_analysis.xml
+++ b/app/src/main/res/layout/activity_data_analysis.xml
@@ -4,6 +4,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.DataAnalysisActivity">
+    tools:context="br.com.samuelzvir.meuabc.activities.DataAnalysisActivity">
 
 </RelativeLayout>
