--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,7 +21,7 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:text="@string/messages"
-        android:onClick="onToMessages"
+        android:onClick="onToWords"
         android:drawableTop="@drawable/ic_font_download_black_48dp"
         android:layout_below="@+id/imageView"
         android:layout_toLeftOf="@+id/play"
