--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,9 +7,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    tools:context="br.com.samuelzvir.meuabc.activities.SettingsActivity">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="br.com.samuelzvir.meuabc.activities.UserActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -24,7 +24,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/settings"
+        android:text="@string/name"
         android:id="@+id/textView" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/username" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/save"
+        android:onClick="save"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
