--- a/app/src/main/res/layout/activity_create_challenge.xml
+++ b/app/src/main/res/layout/activity_create_challenge.xml
@@ -24,7 +24,7 @@
         android:layout_height="70dp"
         android:ems="10"
         android:layout_weight="2"
-        android:background="#1887C7"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_alignBottom="@+id/abc"
         android:layout_alignRight="@+id/image"
         android:layout_alignEnd="@+id/image" />
@@ -67,9 +67,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewPicture"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/dog"
         android:layout_marginTop="124dp"
         android:layout_below="@+id/send"
         android:layout_alignParentLeft="true"
