--- a/app/src/main/res/layout/activity_photo_intent.xml
+++ b/app/src/main/res/layout/activity_photo_intent.xml
@@ -9,11 +9,11 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         >
-        <Button android:text="@string/btnIntend" android:id="@+id/btnIntend"
+        <Button android:text="@string/takeBigPicture" android:id="@+id/btnIntend"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1" />
-        <Button android:text="@string/btnIntendS" android:id="@+id/btnIntendS"
+        <Button android:text="@string/takeSmallPicture" android:id="@+id/btnIntendS"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1" />
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:visibility="visible"
-        android:id="@+id/imageView1" />
+        android:id="@+id/photo" />
     <VideoView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
