--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -25,23 +25,21 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         >
-        <Button android:text="@string/btnIntend" android:id="@+id/btnIntend"
+        <Button android:text="@string/takeBigPicture" android:id="@+id/btnIntend"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1" />
-        <Button android:text="@string/btnIntendS" android:id="@+id/btnIntendS"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="1" />
+            android:text="@string/save"
+            android:id="@+id/ok"
+            android:onClick="toChallenge"/>
     </LinearLayout>
     <ImageView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:visibility="visible"
-        android:id="@+id/imageView1" />
-    <VideoView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:visibility="invisible"
-        android:id="@+id/videoView1" />
+        android:id="@+id/photo" />
+
 </LinearLayout>
