--- a/app/src/main/res/layout/activity_create_challenge.xml
+++ b/app/src/main/res/layout/activity_create_challenge.xml
@@ -7,8 +7,6 @@
     android:background="@color/white"
     tools:context="br.com.samuelzvir.meuabc.activities.CreateTextActivity">
 
-
-
     <Button
         android:id="@+id/send"
         android:layout_width="110dp"
@@ -35,7 +33,6 @@
         android:id="@+id/status"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/information"
         android:textSize="@dimen/activity_horizontal_margin"
         android:typeface="serif"
         android:layout_below="@+id/word"
@@ -77,5 +74,15 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="39dp"
         android:layout_marginStart="39dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/menu"
+        android:id="@+id/menuButton"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/word"
+        android:layout_toStartOf="@+id/word"
+        android:onClick="toMenu"/>
 
 </RelativeLayout>
