--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -96,8 +96,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/goBack"
+        android:text="@string/save"
         android:id="@+id/menuButton"
         android:layout_gravity="center_horizontal"
-        android:onClick="toMenu"/>
+        android:onClick="save"/>
 </LinearLayout>
