--- a/app/src/main/res/layout/activity_admin_form.xml
+++ b/app/src/main/res/layout/activity_admin_form.xml
@@ -25,7 +25,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@color/white"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.UserActivity">
+    tools:context="br.com.samuelzvir.meuabc.activities.AdminFormActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -64,6 +64,13 @@
         android:layout_gravity="center_horizontal"
         android:id="@+id/passwordField" />
 
+    <TextView
+        android:id="@+id/information"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/activity_horizontal_margin"
+        android:typeface="serif" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,3 +80,4 @@
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
+
