Add base to the data analysis activity.

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -61,7 +61,7 @@
     <Button
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:text="abc"
+        android:text="@string/activities"
         android:id="@+id/abc"
         android:onClick="onToABC"
         android:drawableTop="@drawable/abc_48p"
