--- a/app/src/main/res/layout/activity_abc.xml
+++ b/app/src/main/res/layout/activity_abc.xml
@@ -14,13 +14,92 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.samuelzvir.meuabc.activities.ABCActivity">
 
+    <TextView
+        android:id="@+id/usersTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/users"
+        android:textSize="25dp"
+        android:typeface="normal"
+        android:textStyle="bold" />
 
-</RelativeLayout>
+    <ListView
+        android:layout_width="399dp"
+        android:layout_height="399dp"
+        android:id="@+id/studentslistView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_weight="0.77"
+        android:choiceMode="singleChoice"
+        android:clickable="true" />
+    <TextView
+        android:id="@+id/information"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/words"
+        android:textSize="25dp"
+        android:typeface="normal"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <!--<CheckBox-->
+        <!--android:id="@+id/usePositionsCB"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+        <ListView
+            android:layout_width="399dp"
+            android:layout_height="1044dp"
+            android:id="@+id/users"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="0.77"
+            android:choiceMode="multipleChoice"
+            android:clickable="true" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/deleteWord"
+            android:id="@+id/deleteButton"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/newWord"
+            android:id="@+id/newWord"
+            android:onClick="addWord"
+            android:layout_below="@+id/users"
+            android:layout_alignRight="@+id/users"
+            android:layout_alignEnd="@+id/users"
+            android:layout_marginRight="112dp"
+            android:layout_marginEnd="112dp" />
+    </LinearLayout>
+</LinearLayout>
