--- a/app/src/main/res/layout/activity_build_challenges.xml
+++ b/app/src/main/res/layout/activity_build_challenges.xml
@@ -58,7 +58,7 @@
             <ListView
                 android:layout_width="399dp"
                 android:layout_height="589dp"
-                android:id="@+id/challenges"
+                android:id="@+id/users"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_weight="0.77"
@@ -86,9 +86,9 @@
                 android:text="@string/newWord"
                 android:id="@+id/newWord"
                 android:onClick="addWord"
-                android:layout_below="@+id/challenges"
-                android:layout_alignRight="@+id/challenges"
-                android:layout_alignEnd="@+id/challenges"
+                android:layout_below="@+id/users"
+                android:layout_alignRight="@+id/users"
+                android:layout_alignEnd="@+id/users"
                 android:layout_marginRight="112dp"
                 android:layout_marginEnd="112dp" />
     </LinearLayout>
