--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2015 Samuel Yuri Zvir
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@color/white"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.StudentMenuActivity">
-
+    tools:context="br.com.samuelzvir.meuabc.activities.StatsActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -21,26 +35,5 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:text="@string/play"
-        android:id="@+id/play"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:drawableTop="@drawable/ic_puzzle_black_48dp"
-        android:layout_below="@+id/imageView"
-        android:onClick="toPlay"
-        android:textSize="10dp" />
-
-    <Button
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:text="@string/logout"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:id="@+id/button"
-        android:drawableTop="@drawable/ic_directions_run_black_48dp"
-        android:onClick="logout"
-        android:textSize="10dp" />
 
 </LinearLayout>
