--- a/app/src/main/res/layout/activity_profiles.xml
+++ b/app/src/main/res/layout/activity_profiles.xml
@@ -25,7 +25,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.ProfilesActivity">
+    tools:context="br.com.samuelzvir.meuabc.activities.ProfilesActivity"
+    android:weightSum="1">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -34,44 +35,84 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <TextView
-        android:id="@+id/information"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/users"
-        android:textSize="25dp"
-        android:typeface="normal"
-        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50"
+        android:layout_width="547dp"
+        android:layout_height="329dp"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_weight="0.06">
 
         <ListView
             android:layout_width="399dp"
-            android:layout_height="589dp"
+            android:layout_height="300dp"
             android:id="@+id/studentslistView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_weight="0.77"
             android:choiceMode="multipleChoice"
-            android:clickable="true" />
+            android:clickable="true"
+            android:layout_weight="0.80" />
     </LinearLayout>
 
-    <Button
+    <TextView
+        android:id="@+id/profilesInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/newUser"
-        android:id="@+id/newUser"
-        android:onClick="toUserSettings"
-        android:layout_below="@+id/studentslistView"
-        android:layout_alignRight="@+id/studentslistView"
-        android:layout_alignEnd="@+id/studentslistView"
-        android:layout_gravity="right" />
+        android:textSize="@dimen/activity_horizontal_margin"
+        android:typeface="serif" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="581dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_weight="0.07">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/newUser"
+            android:id="@+id/newUserBtn"
+            android:onClick="toUserSettings"
+            android:layout_below="@+id/studentslistView"
+            android:layout_alignRight="@+id/studentslistView"
+            android:layout_alignEnd="@+id/studentslistView" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/updateData"
+            android:id="@+id/updateDataBtn"
+            android:onClick="toEditUser"
+            android:layout_below="@+id/studentslistView"
+            android:layout_alignRight="@+id/studentslistView"
+            android:layout_alignEnd="@+id/studentslistView" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/deleteUsers"
+            android:id="@+id/deleteUserBtn"
+            android:onClick="deleteUsers"
+            android:layout_below="@+id/studentslistView"
+            android:layout_alignRight="@+id/studentslistView"
+            android:layout_alignEnd="@+id/studentslistView" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/menu"
+            android:id="@+id/menuBtn"
+            android:onClick="toMenu"
+            android:layout_below="@+id/studentslistView"
+            android:layout_alignRight="@+id/studentslistView"
+            android:layout_alignEnd="@+id/studentslistView" />
+    </LinearLayout>
 
 
 </LinearLayout>
