--- a/app/src/main/res/layout/activity_abc.xml
+++ b/app/src/main/res/layout/activity_abc.xml
@@ -25,7 +25,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.ABCActivity">
+    tools:context="br.com.ema.activities.ABCActivity">
 
     <TextView
         android:id="@+id/usersTitle"
