--- a/app/src/main/res/layout/activity_create_challenge.xml
+++ b/app/src/main/res/layout/activity_create_challenge.xml
@@ -21,7 +21,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    tools:context="br.com.samuelzvir.meuabc.activities.CreateTextActivity">
+    tools:context="br.com.ema.activities.CreateTextActivity">
 
     <Button
         android:id="@+id/send"
