--- a/app/src/main/res/layout/activity_play_challenges.xml
+++ b/app/src/main/res/layout/activity_play_challenges.xml
@@ -20,7 +20,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.samuelzvir.meuabc.activities.PlayChallengesActivity">
+    tools:context="br.com.ema.activities.PlayChallengesActivity">
 
 
 </RelativeLayout>
