--- a/app/src/main/res/layout/content_stats.xml
+++ b/app/src/main/res/layout/content_stats.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_stats"
-    tools:context="br.com.samuelzvir.meuabc.activities.StatsActivity">
+    tools:context="br.com.ema.activities.StatsActivity">
 
 
     <TextView
