--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -28,14 +28,28 @@
     tools:context="br.com.ema.activities.MenuActivity"
     android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="546dp"
         android:layout_height="wrap_content"
-        android:src="@mipmap/logo3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@color/white"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_gravity="top"
+        android:weightSum="1"
+        android:layout_weight="0.2">
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/logo3"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_horizontal" />
+        </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -56,7 +70,7 @@
             android:layout_height="541dp"
             android:layout_weight="0.40"
             android:layout_gravity="center_vertical"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical|center_horizontal">
 
             <Button
                 android:id="@+id/messages"
@@ -96,7 +110,7 @@
             android:layout_height="541dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="0.40"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical|center_horizontal">
 
             <Button
                 android:layout_width="110dp"
