--- a/app/src/main/res/layout/activity_student_menu.xml
+++ b/app/src/main/res/layout/activity_student_menu.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="110dp"
+        android:layout_width="match_parent"
         android:layout_height="110dp"
         android:text="@string/play"
         android:id="@+id/play"
@@ -34,7 +34,7 @@
         android:textSize="10dp" />
 
     <Button
-        android:layout_width="110dp"
+        android:layout_width="match_parent"
         android:layout_height="110dp"
         android:text="@string/logout"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -42,5 +42,6 @@
         android:drawableTop="@drawable/ic_directions_run_black_48dp"
         android:onClick="logout"
         android:textSize="10dp" />
+
 
 </LinearLayout>
