fix speaker bug.

--- a/app/src/main/res/layout/activity_scrabble.xml
+++ b/app/src/main/res/layout/activity_scrabble.xml
@@ -117,8 +117,9 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:textOff="@string/speech_toggle_on"
-            android:textOn="@string/speech_toggle_off"
-            android:layout_gravity="left" />
+            android:textOn="@string/speech_toggle_on"
+            android:layout_gravity="left"
+            android:checked="false" />
 
     </LinearLayout>
 </LinearLayout>
