--- a/app/src/main/res/layout/activity_admin_form.xml
+++ b/app/src/main/res/layout/activity_admin_form.xml
@@ -25,7 +25,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@color/white"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.ema.activities.AdminFormActivity">
+    tools:context="br.com.ema.activities.admin.AdminFormActivity">
 
     <ImageView
         android:id="@+id/imageView"
