--- a/app/src/main/res/layout/activity_manage_words.xml
+++ b/app/src/main/res/layout/activity_manage_words.xml
@@ -25,7 +25,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="br.com.ema.activities.WordsManagementActivity">
+        tools:context="br.com.ema.activities.admin.WordsManagementActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
