--- a/app/src/main/res/layout/activity_scrabble.xml
+++ b/app/src/main/res/layout/activity_scrabble.xml
@@ -24,7 +24,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.ema.activities.ScrabbleActivity"
+    tools:context="br.com.ema.activities.operations.ScrabbleActivity"
     android:gravity="center_horizontal">
 
     <LinearLayout
